--- a/src/app/common/footer-section/footer-section.component.html
+++ b/src/app/common/footer-section/footer-section.component.html
@@ -1,4 +1,4 @@
-<footer class="gray-bg">
+<footer class="gray-bg" *ngIf="isFooterNavVisible">
     <div class="container">
         <div class="footer-top">
             <div class="row">
