--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
                     <img src="../../assets/images/about/whywe.png" class="img-fluid" alt="about" />
                 </div>
                 <div class="col-lg-6">
-                    <h2 class="mb-3 iq-fw-8 mt-5 mt-lg-0">Why We?</h2>
+                    <h2 class="mb-3 iq-fw-8 mt-5 mt-lg-0">Why Us?</h2>
                     <p class="mb-3 iq-fw-6">
                         We are player in the field providing end to end technology
                         solutions including development and maintenance services
