--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </section>
-        <section class="our-map pt-0">
+        <section class="our-map pt-0" *ngIf="false">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
